module/openapi-annotations/src/test/resources/net/jacobpeterson/jet/openapiannotations/blackboxtest/toplevel/fail/customschema/Test.java
import net.jacobpeterson.jet.openapiannotations.annotation.OpenApi;

@OpenApi(
        $schema = "https://a.com"
)
public final class Test {}
